[gd_scene load_steps=2 format=3 uid="uid://blkqtrtjlt0u4"]

[ext_resource type="Script" path="res://Assets/Scripts/LvlPicker.gd" id="1_si41a"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si41a")

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -15.5
offset_right = 97.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Lvl1" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 1"

[node name="Lvl2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 2"

[node name="Lvl3" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Level 3"
